# omega

./: .env.example  .gitignore  LICENSE  ORYON_PHASE_PLAN.md  README.md  oryon_config.yaml  pyproject.toml
backend/: .env.example  package.json
backend/src/: server.js
backend/src/db/: sessionStore.js
backend/src/routes/: sessionRoutes.js
backend/src/services/: analysisService.js
frontend/: app.js  index.html  package.json  styles.css
frontend/src/: App.jsx  styles.css
frontend/src/hooks/: useSpeechRecorder.js
oryon/: __init__.py
oryon/api/: __init__.py  dependencies.py  server.py
oryon/api/dto/: analyze_request.py  analyze_response.py  candle_dto.py  symbol_dto.py
oryon/api/routers/: analyze.py  history.py  live.py  search.py
oryon/backtest/: __init__.py  loader.py  metrics.py  walk_forward.py
oryon/backtest/examples/: run_backtest_example.py
oryon/backtest/reports/: report_builder.py
oryon/core/indicators/: fibonacci.py  momentum.py  moving_averages.py  pattern_candles.py  volatility.py
oryon/core/market_structure/: bos_choch.py  breaker_blocks.py  fvg_imbalance.py  liquidity_zones.py  microstructure.py  order_blocks.py  regime_detection.py  swings_zigzag.py  turtle_soup.py  vwap_sessions.py
oryon/core/pipelines/: analyze_asset.py  ensemble_router.py  multi_timeframe_engine.py  scoring_calibrator.py
oryon/core/risk/: filters.py  (+1 more)
oryon/scripts/: build_symbol_universe.py  export_signals_csv.py  refresh_free_data.py
ui/: index.html  package.json  tailwind.config.js  vite.config.js
ui/public/: symbols-demo.json
ui/src/: App.jsx
(+53 files in other folders)
