[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oryon"
version = "0.1.0"
description = "Oryon - Local institutional-grade market analysis and signal generation platform"
readme = "README.md"
authors = [{name = "Oryon Contributors"}]
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "yfinance>=0.2.30",
  "ccxt>=4.0.0",
  "aiohttp>=3.8",
  "requests>=2.31",
  "python-dateutil>=2.8",
  "pyyaml>=6.0",
  "duckdb>=0.9.0",
  "sqlalchemy>=2.0",
  "tqdm>=4.65",
  "tenacity>=8.2",
  "fastapi>=0.110",
  "uvicorn>=0.23",
  "httpx>=0.25"
  "tenacity>=8.2"
]

[project.optional-dependencies]
tests = [
  "pytest>=7.4"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["oryon*"]
